# asm-annotate

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  asm_annotate.py  asm_core.py  asm_web.py  disasm.py  elf.py  picker.py
src/: cli.rs  core.rs  main.rs  source_reader.rs  types.rs
src/backends/: demangle.rs  disasm.rs  elf.rs  mod.rs  picker.rs
src/commands/: annotate.rs  dump.rs  list.rs  mod.rs
src/ui/: colors.rs  mod.rs  source_view.rs  tui.rs
