[package]
name = "asm-annotate"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
color-eyre = "0.6.3"
goblin = "0.9.0"
cpp_demangle = "0.4.3"
regex = "1.10.4"
colored = "2.1.0"
indexmap = "2.2.6"
gimli = { version = "0.28.1", features = ["read"] }
addr2line = "0.21.0"
unicode-width = "0.2.2"
terminal_size = "0.3"
capstone = "0.12.0"
ratatui = "0.27.0"
crossterm = "0.27.0"
skim = "0.10"
lazy_static = "1.4.0"

[dev-dependencies]
tempfile = "3"
