[package]
name = "asm-annotate"
version = "0.9.1"
edition = "2024"
description = "Source↔assembly annotation for ELF files, with an interactive TUI and plain-text dump mode"
license = "Apache-2.0"
repository = "https://github.com/andy31415/asm-annotate"
readme = "README.md"
keywords = ["assembly", "embedded", "dwarf", "disassembly", "elf"]
categories = ["command-line-utilities", "development-tools::debugging"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
color-eyre = "0.6.3"
goblin = "0.9.0"
cpp_demangle = "0.4.3"
regex = "1.10.4"
colored = "2.1.0"
indexmap = "2.2.6"
gimli = { version = "0.28.1", features = ["read"] }
unicode-width = "0.2.2"
terminal_size = "0.3"
capstone = "0.12.0"
ratatui = "0.27.0"
crossterm = "0.27.0"
skim = "0.10"
tui-logger = "0.11.0"
notify = "6.1.1"

[dev-dependencies]
tempfile = "3"
