[package]
name = "asm-annotate"
version = "0.9.1"
edition = "2024"
description = "Source↔assembly annotation for ELF files, with an interactive TUI and plain-text dump mode"
license = "Apache-2.0"
repository = "https://github.com/andy31415/asm-annotate"
readme = "README.md"
keywords = ["assembly", "embedded", "dwarf", "disassembly", "elf"]
categories = ["command-line-utilities", "development-tools::debugging"]

[dependencies]
clap = { version = "4", features = ["derive"] }
log = "0.4"
color-eyre = "0.6"
goblin = "0.10"
cpp_demangle = "0.4"
regex = "1"
colored = "3"
indexmap = "2"
gimli = { version = "0.33", features = ["read"] }
unicode-width = "0.2"
terminal_size = "0.4"
capstone = "0.14"
ratatui = "0.30"
crossterm = "0.29"
skim = "0.10"
tui-logger = "0.18"
notify = "7"

[dev-dependencies]
tempfile = "3"
